--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+button {
+	@apply py-2 px-4 border border-transparent rounded-md shadow-md text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700;
+}
+
+button.Logout {
+    @apply bg-red-600 hover:bg-red-700;
+}
